--- a/index.jade
+++ b/index.jade
@@ -1,218 +1,208 @@
 doctype html
 html(lang="en")
 	include parts/head
-	+head("Remote software development | UNeed Web", "offshore software development, web development outsourcing, web design outsourcing", "Bringing cohesion, integration and outreach for your business with forefront IT services. We craft web and mobile projects, enliven them with design.")
-	body#about-page
-		include parts/header
-		include parts/mobile-nav
-		section#landing.flex.align-ver-center
-			.background-image.lazy-load-image
-				.small
-				.large
-			.container
-				h1.title Distinctive Web Development
-				h3.sub-title Shaping your tech ideas with smart engineering,<br> creating an outreach for your business.
-			#scroll-down
-				include icons/arrow
+	+head("Web development company | Uneed Web", "offshore software development, web development outsourcing, web design outsourcing", "Uneed Web is a web development company. We shape your tech ideas with smart engineering, create an outreach for your business, provide an access to talents that adds value.")
+	body
+		.page-wrapper
 
-		section#info.animated.section-top.flex.align-ver-center
-			.container
-				h2.title.dark Our Services
-				h3.sub-title Depending on time, budget, scope, and complexity of your projects we provide 3 options to help your business maintain, extend and acquire qualitative IT resources.
+			include parts/header
+			+header("hp")
 
-		section#services.animated.flex.align-ver-center
-			.container.service.flex.flex-column.align-ver-center(data-href="/services/outsource")
-				img.service-image(src="/images/gif/outsource.gif" width="100" height="100")
-				.service-description
-					h4.title.dark.service-title Project Development
-					h5.sub-title.service-subtitle recommended for
-					ul.service-list
-						li
-							span
-								include icons/checkmark
-							span short-term projects
-						li
-							span
-								include icons/checkmark
-							span fixed cost/time or budget
-						li
-							span
-								include icons/checkmark
-							span small to middle scale projects
-					a(href="/services/outsource")
-						button(role="button") Get more info
+			main.page-content#main
 
-			.container.service.flex.flex-column.align-ver-center(data-href="/services/outstaff")
-				img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
-				.service-description
-					h4.title.dark.service-title Dedicated Development Team
-					h5.sub-title.service-subtitle recommended for
-					ul.service-list
-						li
-							span
-								include icons/checkmark
-							span direct control over project stages
-						li
-							span
-								include icons/checkmark
-							span full-time engagement of IT experts to your project
-					a(href="/services/outstaff")
-						button(role="button") Get more info
+				section.section(data-animation="fadeIn")
+					.section__wrapper
+						h2.section__title Our Services
+						p.section__text Depending on time, budget, scope, and complexity of your projects we provide 3 options to help shape your tech endeavors by providing IT services as well as extending, relocating of dedicated IT resources.
 
-			.container.service.flex.flex-column.align-ver-center(data-href="/services/relocation")
-				img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
-				.service-description
-					h4.title.dark.service-title Specialist for Relocation
-					h5.sub-title.service-subtitle recommended for
-					ul.service-list
-						li
-							span
-								include icons/checkmark
-							span limited recruitment capabilities
-						li
-							span
-								include icons/checkmark
-							span building/extending your IT department
-					a(href="/services/relocation")
-						button(role="button") Get more info
+				section.section.section--without-title
+					.services
+						ul.services__list
+							li.services__item.services__item--project(data-animation="fadeInUp")
+								.services__item-wrapper
+									h3.services__title Project Development
+									span.services__recommend recommended for
+									ul.services__recommends-list
+										li.services__recommends-item
+											include icons/checkmark
+											span short-term projects
+										li.services__recommends-item
+											include icons/checkmark
+											span fixed cost/time or budget
+										li.services__recommends-item
+											include icons/checkmark
+											span small to middle scale
+									a.services__link.btn(href="/services/outsource/") Get more info
+							li.services__item.services__item--team(data-animation="fadeInUp")
+								.services__item-wrapper
+									h3.services__title Staff Augmentation
+									span.services__recommend recommended for
+									ul.services__recommends-list
+										li.services__recommends-item
+											include icons/checkmark
+											span non-time-bound projects
+										li.services__recommends-item
+											include icons/checkmark
+											span app development across diverse technology verticals
+									a.services__link.btn(href="/services/outstaff/") Get more info
+							li.services__item.services__item--relocation(data-animation="fadeInUp")
+								.services__item-wrapper
+									h3.services__title Relocation Specialist
+									span.services__recommend recommended for
+									ul.services__recommends-list
+										li.services__recommends-item
+											include icons/checkmark
+											span limited recruitment capabilities
+										li.services__recommends-item
+											include icons/checkmark
+											span extension of in-house application development teams
+									a.services__link.btn(href="/services/relocation/") Get more info
+					.section__wrapper(data-animation="fadeInUp")
+						p.section__text Learn more about each of these options and their difference 
+							a.link(href="/services") here
 
-		section#about-services.animated.section-bottom.flex.align-ver-center
-			.container
-				| Learn more about each of these options and their difference 
-				a.link.underlined(href="/services") here
-		section#guarantee.animated.flex.align-ver-center
-			.container
-				.section-top
-					h2.title Our Added Value
-					h3.sub-title With delivering what we do the best: development and design of software we provide our customers with
-				.features-container
-					.feature
-						include icons/1-quality
-						span Outstanding quality
-					.feature
-						include icons/2-english
-						span Specialist with proficient technical and language skills
-					.feature
-						include icons/3-office
-						span.intellectual Protected intellectual property rights
-					.feature
-						include icons/4-meeting
-						span Personal meetings and direct comunication
-					.feature
-						include icons/5-seniors
-						span Candidates market overview within 24 hours
-					.feature
-						include icons/6-risk
-						span Long-term partnership
+				section.section.section--main-color.section--bottom-with-gradient(data-animation="fadeInUp")
+					.section__wrapper
+						h2.section__title Our Added Value
+						p.section__text With delivering what we are most adept at - Distinctive Web Development - we provide our customers with
+						.main-features
+							.main-features__wrapper
+								ul.main-features__list(data-animations-group)
+									li.main-features__item.main-features-item.main-features-item--icon-left
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
+											include icons/1-quality
+										span.main-features-item__descr Thorough process-related involvement 
+									li.main-features__item.main-features-item.main-features-item--icon-left
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
+											include icons/2-english
+										span.main-features-item__descr Specialist with proficient technical and language skills
+									li.main-features__item.main-features-item.main-features-item--icon-left
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
+											include icons/3-office
+										span.main-features-item__descr Protected intellectual property rights
+									li.main-features__item.main-features-item.main-features-item--icon-left
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
+											include icons/4-meeting
+										span.main-features-item__descr Personal meetings and direct comunication
+									li.main-features__item.main-features-item.main-features-item--icon-left
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
+											include icons/5-seniors
+										span.main-features-item__descr Candidates market overview within 24 hours
+									li.main-features-item.main-features-item--icon-left
+										span.main-features-item__icon-wrapper(data-animation="zoomIn")
+											include icons/6-risk
+										span.main-features-item__descr Competence with fair value
 
-		.gradient
+				section.section.section--small-padding-bottom(data-animation="fadeInUp")
+					.section__wrapper
+						h2.section__title Our Expertise
+						p.section__text Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
+				section.section.section--without-padding-top.section--small-padding-bottom(data-animation="fadeInUp")
+					.section__wrapper.section__wrapper--slider
+						.slider
+							.slider__switcher.switcher
+								button.switcher__btn.switcher__btn--prev(type="button")
+									include icons/left-arrow
+								h3.switcher__name.switcher__name--active Web Development
+								h3.switcher__name Mobile Development
+								h3.switcher__name Product Design
+								button.switcher__btn.switcher__btn--next(type="button")
+									include icons/left-arrow
+							ul.slider__slides-wrapper
+								li.slider__slide
+									.slider__slide-inner.portfolio-item.portfolio-item--web
+										p.portfolio-item__descr Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
+										ul.portfolio-item__tags.tags
+											li.tags__item React JS
+											li.tags__item Angular JS
+											li.tags__item JavaScript
+											li.tags__item CSS
+											li.tags__item HTML
+										a.portfolio-item__btn.btn(href="/portfolio/") Go to portfolio
+								li.slider__slide
+									.slider__slide-inner.portfolio-item.portfolio-item--mobile
+										p.portfolio-item__descr Uneed Web builds mobile applications by using cross-platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
+										ul.portfolio-item__tags.tags
+											li.tags__item ReactJS Native
+											li.tags__item Ionic
+											li.tags__item Xamarin Framework
+										a.portfolio-item__btn.btn(href="/portfolio/") Go to portfolio
+								li.slider__slide
+									.slider__slide-inner.portfolio-item.portfolio-item--design
+										p.portfolio-item__descr Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
+										ul.portfolio-item__tags.tags
+											li.tags__item Sketch
+											li.tags__item Adobe Photoshop
+											li.tags__item Adobe Illustrator
+											li.tags__item Interfaces
+											li.tags__item Web Design \ UX
+										a.portfolio-item__btn.btn(href="/portfolio/") Go to portfolio
+							.slider__dots
+								button.slider__dot.slider__dot--active(type="button")
+								button.slider__dot(type="button")
+								button.slider__dot(type="button")
+						a.section__btn.section__btn--hidden-on-desktop.btn(href="/portfolio/") Go to portfolio
+							include icons/arrow-go
+			include parts/footer
+			+footer("hp")
+		script(src="js/main-nav.min.js")
+		script(src="/js/index.min.js")
+		script.
 
-		section#portfolio.animated
-			.container
-				.section-top
-					h2.title.dark Our Expertise
-					h3.sub-title Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
+			(function () {
+				var slider = document.querySelector('.slider'),
+						slidesWrapper = slider.querySelector('.slider__slides-wrapper'),
+						slideItems = slider.querySelectorAll('.slider__slide'),
+						slidesCount = slideItems.length,
+						sliderStepValue = 100/slidesCount,
+						slideCurrent = 1,
+						slideNames = slider.querySelectorAll('.switcher__name'),
+						sliderPrev = slider.querySelector('.switcher__btn--prev'),
+						sliderNext = slider.querySelector('.switcher__btn--next'),
+						sliderDots = slider.querySelectorAll('.slider__dot');
 
-				#switcher
-					#switch-left
-						include icons/left-arrow
-					a(onclick="uneed.onChangePortfolio(0)").active
-						h4.sub-title Web Development
-					a(onclick="uneed.onChangePortfolio(1)")
-						h4.sub-title Mobile Development
-					a(onclick="uneed.onChangePortfolio(2)")
-						h4.sub-title Product Design
-					#switch-right
-						include icons/left-arrow
+				function slideChange (index) {
+					var	sliderTransValue = (index-1)*sliderStepValue;
+					slidesWrapper.style.transform = 'translateX(-'+sliderTransValue+'%)';
+					sliderDots[slideCurrent-1].classList.remove('slider__dot--active');
+					sliderDots[index-1].classList.add('slider__dot--active');
+					slideNames[slideCurrent-1].classList.remove('switcher__name--active');
+					slideNames[index-1].classList.add('switcher__name--active');
+					slideCurrent = index;
+				};
 
-				.portfolio-slides.swipeshow.autoheight
-					.slides
-						.slide(data-tappable="true")
-							.portfolio-item(data-tappable="true")
-								p.portfolio-item-descr Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
+				slidesWrapper.style.width = slidesCount*100+'%';
 
-								.tags
-									.tag React JS
-									.tag Angular JS
-									.tag JavaScript
-									.tag CSS
-									.tag HTML
-
-								.portfolio-image.web
-								.desktop-button
-									a(href="/portfolio")
-										button(role="button")
-											span Go to portfolio
-											span.icon
-												include icons/arrow-go
-
-						.slide(data-tappable="true")
-							.portfolio-item(data-tappable="true")
-								p.portfolio-item-descr Uneed Web builds mobile applications by using cross-platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
-
-								.tags
-									.tag ReactJS Native
-									.tag Ionic
-									.tag Xamarin Framework
-
-								.portfolio-image.mobile
-								.desktop-button
-									a(href="/portfolio")
-										button(role="button")
-											span Go to portfolio
-											span.icon
-												include icons/arrow-go
-
-						.slide(data-tappable="true")
-							.portfolio-item(data-tappable="true")
-								p.portfolio-item-descr Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
-
-								.tags
-									.tag Sketch
-									.tag Adobe Photoshop
-									.tag Adobe Illustrator
-									.tag Interfaces
-									.tag Web Design \ UX
-
-								.portfolio-image.design
-								.desktop-button
-									a(href="/portfolio")
-										button(role="button")
-											span Go to portfolio
-											span.icon
-												include icons/arrow-go
-
-					.dots
-					.mobile-button
-						a(href="/portfolio")
-							button(role="button")
-								span Go to portfolio
-								span.icon
-									include icons/arrow-go
-
-		include parts/footer
-		script(type="text/javascript" src="/js/libs.min.js")
-		script(type="text/javascript" src="/js/index.min.js")
-		include parts/navbar
-		script(type="text/javascript").
-			window.onload = function loadStuff() {
-				var win, doc, img, header, enhancedClass;
-				var items = Array.prototype.slice.call(document.querySelectorAll('.lazy-load-image'), 0);
-
-				// Quit early if older browser (e.g. IE 8).
-				if (!('addEventListener' in window)) {
-					return;
-				}
-
-				items.forEach(function(lazyLoadImage) {
-					var targetImage = lazyLoadImage.querySelector('.large');
-					var imageUrl = getComputedStyle(targetImage)['backgroundImage'];
-
-					var image = new Image();
-					image.onload = function() {
-						lazyLoadImage.classList.add('loaded');
-					};
-					image.src = imageUrl.match(/(?:\(['|"]?)(.*?)(?:['|"]?\))/)[1];
+				sliderPrev.addEventListener('click', function () { 
+					if (slideCurrent > 1) {
+						slideChange(slideCurrent-1);
+					}
 				});
-			};
 
+				sliderNext.addEventListener('click', function () {
+					if (slideCurrent < slidesCount) {
+						slideChange(slideCurrent+1);
+					}
+				});
+
+				slideNames.forEach(function (item, index) {
+					slideNames[index].addEventListener('click', function () {
+						slideChange(index+1);
+					});
+				});
+
+				sliderDots.forEach(function (item, index) {
+					sliderDots[index].addEventListener('click', function () {
+						slideChange(index+1);
+					});
+				});
+
+				window.addEventListener('keydown', function (event) {
+					if (event.keyCode == 37 && slideCurrent > 1) {
+						slideChange(slideCurrent-1);
+					}
+					if (event.keyCode == 39 && slideCurrent < slidesCount) {
+						slideChange(slideCurrent+1);
+					}
+				});
+			})();
