--- a/parts/header.jade
+++ b/parts/header.jade
@@ -1,18 +1,26 @@
-// Google Tag Manager (noscript)
-noscript
-	iframe(src='https://www.googletagmanager.com/ns.html?id=GTM-PW9LSKQ', height='0', width='0', style='display:none;visibility:hidden')
-// End Google Tag Manager (noscript)
-header
-	.container
-		nav
-			a(href="/").logo-container
-				.logo
-					include ../icons/logo
-				.logo-text-container
-					include ../icons/logo-text
-			.menu-container
-				include menu
-#toggle-navbar
-	.icon-bar
-	.icon-bar
-	.icon-bar
+mixin header(modifier)
+	// Google Tag Manager (noscript)
+	noscript
+		iframe(src="https://www.googletagmanager.com/ns.html?id=GTM-PW9LSKQ", height="0", width="0", style="display:none;visibility:hidden")
+	// End Google Tag Manager (noscript)
+	header.page-header(class="page-header--#{modifier}")
+		nav.main-nav.main-nav--top.main-nav--closed(class="main-nav--#{modifier}")
+			.main-nav__wrapper
+				.main-nav__logo.logo
+						a(href="/")
+							include ../icons/logo
+							include ../icons/logo-text
+				button.main-nav__toggle(type="button")
+				ul.main-nav__list
+					li.main-nav__item
+						a(href="/services/") Services
+					li.main-nav__item
+						a(href="/portfolio/") Portfolio
+					li.main-nav__item
+						a(href="/contact-us/") Contact Us	
+		.page-header__wrapper(data-animation="pulse")
+			- if (modifier == "hp")
+				h1.page-header__title Distinctive Web Development
+				p.page-header__text Shaping your tech ideas with smart engineering, creating an outreach for your business. Where customers are eager to return.
+				a.page-header__scroll-btn(href="#main")
+					include ../icons/arrow
