--- a/portfolio/booking/index.jade
+++ b/portfolio/booking/index.jade
@@ -1,37 +1,38 @@
 doctype html
 html(lang="en")
-	include ../../parts/b-head
-	+head("Banking App Development | Uneed Web", "Fee billing system, fee management system, Web Development, Automated billing workflow", "Creation of a fee billing system for a major Hong Kong corporate bank. A software that calculates operational and managerial fees.")
+	include ../../parts/head
+	+head("Booking App Development | Uneed Web", "Travel application, Web Development, NLP technology", "Development of a web application for a travel company with a complete customer planning journey features: booking, invoicing, payment system.")
 
 	body
 		.page-wrapper
 
-			include ../../parts/b-header
-			+b-header("project")
+			include ../../parts/header
+			+header("project")
 
 			main.page-content
 
 				.project-switcher(data-animation="bounceIn")
 					.project-switcher__wrapper
-						a.project-switcher__link.project-switcher__link--prev(href="/portfolio/yow/b-index.html")
+						a.project-switcher__link.project-switcher__link--prev(href="/portfolio/localisation/")
 							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 							span Previous Project
-						a.project-switcher__link.project-switcher__link--next(href="/portfolio/gambling/b-index.html")
+						a.project-switcher__link.project-switcher__link--next(href="/portfolio/on-game/")
 							span Next Project
 							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 
 				section.section(data-animation="fadeInUp")
 					.section__wrapper
-						span.section__project-type Banking / Finance
+						span.section__project-type Travel
 						h1.section__title What was the challenge?
-						p.section__text Create a fee billing system for a major Hong Kong corporate bank. The system has to charge regular fees from institutional clients for management and performance on financial services.
+						p.section__text Develop a web application for a travel company with a complete customer planning journey features. Improve user search performance by using NLP technology.
 
-				section.section.section--approaches.approaches.approaches--banking(data-animation="fadeInUp")
+				section.section.section--approaches.approaches.approaches--booking(data-animation="fadeInUp")
 					.section__wrapper
 						h2.section__title Challenge accepted
-						p.section__text Based on set requirements, our developers team created a single fee management system that gradually reduced costs of the billing process for the bank. The software could optimize fee schedules, had an automated fee discount policy, included automated fee calculation, manual and automated billing workflows and reports, featured customized standard instructions workflow.
+						p.section__text.section__text--with-margin-bottom After defining initial requirements, tools and frameworks for the project, the travel website was developed and featured GDS integration with booking engine, invoicing and payment system. Built on a cross platform and with a responsive design it contained a simplified booking process with real-time results.
+						p.section__text The natural language processing entity linking was implemented for user search performance improvement. This data input technology allowed determining the identity of entities mentioned in the text by user.
 
 				section.section(data-animation="fadeInUp")
 					.section__wrapper.section__wrapper--tight
@@ -53,20 +54,20 @@ html(lang="en")
 							li.slider__slide
 								.slider__slide-inner
 									.slider__img-wrapper
-										img(src="../../photos/banking/banking-gallery-1.png")
+										img(src="../../photos/booking/booking-gallery-1.png")
 							li.slider__slide
 								.slider__slide-inner
 									.slider__img-wrapper
-										img(src="../../photos/banking/banking-gallery-2.png")
+										img(src="../../photos/booking/booking-gallery-2.png")
 						.slider__dots
 							button.slider__dot.slider__dot--active(type="button")
 							button.slider__dot(type="button")
 					.section__wrapper.section__wrapper--tight
-						a.section__btn.btn(href="/portfolio/b-index.html") Back to all projects
+						a.section__btn.btn(href="/portfolio/") Back to all projects
 							include ../../icons/arrow-go
 
-			include ../../parts/b-footer
-			+b-footer("project")
+			include ../../parts/footer
+			+footer("project")
 		script(src="/js/main-nav.min.js")
 		script.
 
