--- a/portfolio/gambling/index.jade
+++ b/portfolio/gambling/index.jade
@@ -2,68 +2,103 @@ doctype html
 html(lang="en")
 	include ../../parts/head
 	+head("Gambling App Development | Uneed Web", "Web Development, blackjack, roulette, baccarat, WebSocket", "Revamping of existing gambling web applications for a betting company with interactive components.")
-	body#portfolio-project-page
-		include ../../parts/header
-		include ../../parts/mobile-nav
 
-		section#landing
+	body
+		.page-wrapper
 
-		section#description
-			.container
-				.buttons-container
-					a(href="/portfolio/banking")
-						button.prev-project
-							span.icon.rotated
+			include ../../parts/header
+			+header("project")
+
+			main.page-content
+
+				.project-switcher(data-animation="bounceIn")
+					.project-switcher__wrapper
+						a.project-switcher__link.project-switcher__link--prev(href="/portfolio/banking/")
+							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 							span Previous Project
-					a(href="/portfolio/localisation")
-						button.next-project
+						a.project-switcher__link.project-switcher__link--next(href="/portfolio/social-travel/")
 							span Next Project
-							span.icon
+							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
-				.section-top
-					h2.type Gambling
-					h1.title.dark What was the challenge?
-					h2.sub-title Revamp an existing gambling web applications for an Israeli-based betting company. Enable a real-time video stream for games like blackjack, roulette, and baccarat.
 
-		section#approaches.section-top.gambling
-			.container
-				h1.title Challenge accepted
-				h2.sub-title To enable a real-time visual experience, the tech team developed the wrapper for video streaming. The users now could watch and participate in the game. A live web chat was created for direct communication. An additional option of spectator mode was designed. The interactive system of betting was introduced by using functional video layers and WebSocket technology.
+				section.section(data-animation="fadeInUp")
+					.section__wrapper
+						span.section__project-type Gambling
+						h1.section__title What was the challenge?
+						p.section__text Revamp an existing gambling web applications for an Israeli-based betting company. Enable a real-time video stream for games like blackjack, roulette, and baccarat.
 
-		section#technologies
-			.container
-				.section-top
-					h1.title.dark What technologies did we use?
-					.tags
-						.tag Angular JS
-						.tag Grunt
-						.tag jQuery
-						.tag Less
-						.tag underscore
-						.tag WebSockets
-						.tag TeamCity
-						.tag HTML5 Video
+				section.section.section--approaches.approaches.approaches--gambling(data-animation="fadeInUp")
+					.section__wrapper
+						h2.section__title Challenge accepted
+						p.section__text To enable a real-time visual experience, the tech team developed the wrapper for video streaming. The users now could watch and participate in the game. A live web chat was created for direct communication. An additional option of spectator mode was designed. The interactive system of betting was introduced by using functional video layers and WebSocket technology.
 
-		section#gallery
-			.container
-				.gallery-container.swipeshow.gambling
-					.slides
-						.slide
-						.slide
-					.dots
-					.slide-left
-					.slide-right
+				section.section(data-animation="fadeInUp")
+					.section__wrapper.section__wrapper--tight
+						h2.section__title What technologies did we use?
+						ul.section__tags.tags
+							li.tags__item Angular JS
+							li.tags__item Grunt
+							li.tags__item jQuery
+							li.tags__item Less
+							li.tags__item underscore
+							li.tags__item WebSockets
+							li.tags__item TeamCity
+							li.tags__item HTML5 Video
+					.slider.slider--project
+						ul.slider__slides-wrapper
+							li.slider__slide
+								.slider__slide-inner
+									.slider__img-wrapper
+										img(src="../../photos/gambling/gambling-gallery-1.png")
+							li.slider__slide
+								.slider__slide-inner
+									.slider__img-wrapper
+										img(src="../../photos/gambling/gambling-gallery-2.png")
+						.slider__dots
+							button.slider__dot.slider__dot--active(type="button")
+							button.slider__dot(type="button")
+					.section__wrapper.section__wrapper--tight
+						a.section__btn.btn(href="/portfolio/") Back to all projects
+							include ../../icons/arrow-go
 
-		section#back
-			a(href="/portfolio")
-				button(role="button")
-					span Back to all projects
-					span.icon
-						include ../../icons/arrow-go
+			include ../../parts/footer
+			+footer("project")
+		script(src="/js/main-nav.min.js")
+		script.
 
-		include ../../parts/footer
-		script(type="text/javascript" src="/js/libs.min.js")
-		script(type="text/javascript" src="/js/portfolio.min.js")
-		include ../../parts/navbar
+			(function () {
+				var slider = document.querySelector('.slider'),
+						slidesWrapper = slider.querySelector('.slider__slides-wrapper'),
+						slideItems = slider.querySelectorAll('.slider__slide'),
+						slidesCount = slideItems.length,
+						sliderStepValue = 100/slidesCount,
+						slideCurrent = 1,
+						sliderDots = slider.querySelectorAll('.slider__dot');
 
+				function slideChange (index) {
+					var	sliderTransValue = (index-1)*sliderStepValue;
+					slidesWrapper.style.transform = 'translateX(-'+sliderTransValue+'%)';
+					sliderDots[slideCurrent-1].classList.remove('slider__dot--active');
+					sliderDots[index-1].classList.add('slider__dot--active');
+					slideCurrent = index;
+				};
+
+				slidesWrapper.style.width = slidesCount*100+'%';
+
+				sliderDots.forEach(function (item, index) {
+					sliderDots[index].addEventListener('click', function () {
+						slideChange(index+1);
+					});
+				});
+
+				window.addEventListener('keydown', function (event) {
+					if (event.keyCode == 37 && slideCurrent > 1) {
+						slideChange(slideCurrent-1);
+					}
+					if (event.keyCode == 39 && slideCurrent < slidesCount) {
+						slideChange(slideCurrent+1);
+					}
+				});
+
+			})();
