--- a/portfolio/social-travel/index.jade
+++ b/portfolio/social-travel/index.jade
@@ -2,75 +2,107 @@ doctype html
 html(lang="en")
 	include ../../parts/head
 	+head("Social Network App Development | Uneed Web", "Travel social platform, Web Development", "Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.")
-	body#portfolio-project-page
-		include ../../parts/header
-		include ../../parts/mobile-nav
 
-		section#landing
+	body
+		.page-wrapper
 
-		section#description
-			.container
-				.buttons-container
-					a(href="/portfolio/localisation")
-						button.prev-project
-							span.icon.rotated
+			include ../../parts/header
+			+header("project")
+
+			main.page-content
+
+				.project-switcher(data-animation="bounceIn")
+					.project-switcher__wrapper
+						a.project-switcher__link.project-switcher__link--prev(href="/portfolio/gambling/")
+							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
 							span Previous Project
-					a(href="/portfolio/travel")
-						button.next-project
+						a.project-switcher__link.project-switcher__link--next(href="/portfolio/localisation/")
 							span Next Project
-							span.icon
+							span.project-switcher__arrow-icon
 								include ../../icons/arrow-go
-				.section-top
-					h2.type Travel
-					h1.title.dark What was the challenge?
-					h2.sub-title Create an engaging travel-oriented social network service. Build a platform that facilitates interaction between travel organizers, tourists, agencies, equipment stores. Consolidate network environment with e-commerce. 
 
-		section#approaches.section-top.social-travel
-			.container
-				h1.title Challenge accepted
-				h2.sub-title
-					p Our team of experts developed a social media application that enabled users to create, book activities (canoeing, climbing, horse-riding, hiking and mountaineering). The activities could be organized both by agencies as well as by single travelers. 
-					p An e-commerce platform was integrated into the web application and facilitated processing not only activity payments but also allowed equipment stores to sell their products onsite. As a social media, the network provided feedback tools, reviews, commentaries, messaging. 
+				section.section(data-animation="fadeInUp")
+					.section__wrapper
+						span.section__project-type Travel
+						h1.section__title What was the challenge?
+						p.section__text Create an engaging travel-oriented social network service. Build a platform that facilitates interaction between travel organizers, tourists, agencies, equipment stores. Consolidate network environment with e-commerce. 
 
-		section#technologies
-			.container
-				.section-top
-					h1.title.dark What technologies did we use?
-					.tags
-						.tag Angular JS
-						.tag Bower
-						.tag Stylus
-						.tag Jade
-						.tag Google maps API
-						.tag Java 8
-						.tag Spring MVC
-						.tag ElasticSearch
-						.tag WebSockets
-						.tag Spring Boot
-						.tag Spring Data
+				section.section.section--approaches.approaches.approaches--social-travel(data-animation="fadeInUp")
+					.section__wrapper
+						h2.section__title Challenge accepted
+						p.section__text.section__text--with-margin-bottom Our team of experts developed a social media application that enabled users to create, book activities (canoeing, climbing, horse-riding, hiking and mountaineering). The activities could be organized both by agencies as well as by single travelers.
+						p.section__text An e-commerce platform was integrated into the web application and facilitated processing not only activity payments but also allowed equipment stores to sell their products onsite. As a social media, the network provided feedback tools, reviews, commentaries, messaging.
 
+				section.section(data-animation="fadeInUp")
+					.section__wrapper.section__wrapper--tight
+						h2.section__title What technologies did we use?
+						ul.section__tags.tags
+							li.tags__item Angular JS
+							li.tags__item Bower
+							li.tags__item Stylus
+							li.tags__item Jade
+							li.tags__item Google maps API
+							li.tags__item Java 8
+							li.tags__item Spring MVC
+							li.tags__item ElasticSearch
+							li.tags__item WebSockets
+							li.tags__item Spring Boot
+							li.tags__item Spring Data
+					.slider.slider--project
+						ul.slider__slides-wrapper
+							li.slider__slide
+								.slider__slide-inner
+									.slider__img-wrapper
+										img(src="../../photos/social-travel/social-travel-gallery-1.png")
+							li.slider__slide
+								.slider__slide-inner
+									.slider__img-wrapper
+										img(src="../../photos/social-travel/social-travel-gallery-2.png")
+						.slider__dots
+							button.slider__dot.slider__dot--active(type="button")
+							button.slider__dot(type="button")
+					.section__wrapper.section__wrapper--tight
+						a.section__btn.btn(href="/portfolio/") Back to all projects
+							include ../../icons/arrow-go
 
-		section#gallery
-			.container
-				.gallery-container.swipeshow.social-travel
-					.slides
-						.slide
-						.slide
-						.slide
-					.dots
-					.slide-left
-					.slide-right
+			include ../../parts/footer
+			+footer("project")
+		script(src="/js/main-nav.min.js")
+		script.
 
-		section#back
-			a(href="/portfolio")
-				button(role="button")
-					span Back to all projects
-					span.icon
-						include ../../icons/arrow-go
+			(function () {
+				var slider = document.querySelector('.slider'),
+						slidesWrapper = slider.querySelector('.slider__slides-wrapper'),
+						slideItems = slider.querySelectorAll('.slider__slide'),
+						slidesCount = slideItems.length,
+						sliderStepValue = 100/slidesCount,
+						slideCurrent = 1,
+						sliderDots = slider.querySelectorAll('.slider__dot');
 
-		include ../../parts/footer
-		script(type="text/javascript" src="/js/libs.min.js")
-		script(type="text/javascript" src="/js/portfolio.min.js")
-		include ../../parts/navbar
+				function slideChange (index) {
+					var	sliderTransValue = (index-1)*sliderStepValue;
+					slidesWrapper.style.transform = 'translateX(-'+sliderTransValue+'%)';
+					sliderDots[slideCurrent-1].classList.remove('slider__dot--active');
+					sliderDots[index-1].classList.add('slider__dot--active');
+					slideCurrent = index;
+				};
 
+				slidesWrapper.style.width = slidesCount*100+'%';
+
+				sliderDots.forEach(function (item, index) {
+					sliderDots[index].addEventListener('click', function () {
+						slideChange(index+1);
+					});
+				});
+
+				window.addEventListener('keydown', function (event) {
+					if (event.keyCode == 37 && slideCurrent > 1) {
+						slideChange(slideCurrent-1);
+					}
+					if (event.keyCode == 39 && slideCurrent < slidesCount) {
+						slideChange(slideCurrent+1);
+					}
+				});
+
+			})();
