--- a/services/index.jade
+++ b/services/index.jade
@@ -1,214 +1,171 @@
 doctype html
 html(lang="en")
 	include ../parts/head
-	+head("Uneed Services | Uneed Web", "web software development, web design development, dedicated development team, project web development, team extension, agile software engingeering", "Uneed Web partners with companies to sustain them by project development, providing dedicated teams and specialists for relocation.")
-	body#services-page
-		include ../parts/header
-		include ../parts/mobile-nav
+	+head("Services | Uneed Web", "web software development, web design development, dedicated development team, project web development, team extension, agile software engingeering", "Uneed Web partners with companies to sustain them by project development, providing IT staff augmentation and helping with relocation specialist.")
+	body
+		.page-wrapper
 
-		section#description
-			.container
-				.section-top
-					h1.title.dark Services
-					h3.sub-title Based on scope and duration of a project, on-site or off-premise delivery team location we provide 3 services. <br/>The combination of services is available.
+			include ../parts/header
+			+header("services")
 
-		section#service-table
-			.services-titles
-				.title-header We provide:
-				.title-option
-					.option-name Onsite Developer/Team
-				.title-option
-					.option-name Workspace/Equipment
-				.title-option
-					.option-name PM
-				.title-option
-					.option-name QA
-				.title-option
-					.option-name Developer/Team solely engaged with your project
-				.title-option
-					.option-name Fast Start of the Project
-				.title-option
-					.option-name PM methodology
-				.title-option
-					.option-name Instant Feedback
-				.title-option
-					.option-name Candidates Interview
-				.title-option
-					.option-name Continuous Client Engagement
-				.title-option
-					.option-name Estimates
-				.title-option
-					.option-name After Release Support
-				.title-option
-					.option-name Billing
-				.title-option.last
-			.services-slides.swipeshow.autoheight
-				.slides
-					.slide
-						.slide-header-container
-							.slide-left.flex.align-hor-center.align-ver-center
-								include ../icons/arrow-go
-							.slide-header
-								.service-image
-									include ../icons/outsource
-								p Project Development
-							.slide-right.flex.align-hor-center.align-ver-center
-								include ../icons/arrow-go
-						.slide-option(data-tappable="true")
-							.option-name Onsite Developer/Team
-							.option-checkbox
-						.slide-option(data-tappable="true")
-							.option-name Workspace/Equipment
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name PM
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name QA
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Developer/Team solely engaged with your project
-							.option-value On Demand
-						.slide-option(data-tappable="true")
-							.option-name Fast Start of the Project
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name PM methodology
-							.option-value SCRUM
-						.slide-option(data-tappable="true")
-							.option-name Instant Feedback
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Candidates Interview
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Continuous Client Engagement
-							.option-value On Demand
-						.slide-option(data-tappable="true")
-							.option-name Estimates
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name After Release Support
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Billing
-							.option-value Monthly Payment
-						.slide-option.button(data-tappable="true")
-							a(href="/services/outsource")
-								button(role="button") Learn More
-						.slide-option.footer(data-tappable="true")
-							a(href="/contact-us") Start Now
-					.slide
-						.slide-header-container
-							.slide-left.flex.align-hor-center.align-ver-center
-								include ../icons/arrow-go
-							.slide-header
-								.service-image
-									include ../icons/outstaff
-								p Dedicated Development Team
-							.slide-right.flex.align-hor-center.align-ver-center
-								include ../icons/arrow-go
-						.slide-option(data-tappable="true")
-							.option-name Onsite Developer/Team
-							.option-checkbox
-						.slide-option(data-tappable="true")
-							.option-name Workspace/Equipment
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name PM
-							.option-value On Demand
-						.slide-option(data-tappable="true")
-							.option-name QA
-							.option-value On Demand
-						.slide-option(data-tappable="true")
-							.option-name Developer/Team solely engaged with your project
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Fast Start of the Project
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name PM methodology
-							.option-value On Demand
-						.slide-option(data-tappable="true")
-							.option-name Instant Feedback
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Cardidates Interview
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Continuous Client Engagement
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Estimates
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name After Release Support
-							.option-value On Demand
-						.slide-option(data-tappable="true")
-							.option-name Billing
-							.option-value Monthly Rates
-						.slide-option.button(data-tappable="true")
-							a(href="/services/outstaff")
-								button(role="button") Learn More
-						.slide-option.footer(data-tappable="true")
-							a(href="/contact-us") Start Now
-					.slide
-						.slide-header-container
-							.slide-left.flex.align-hor-center.align-ver-center
-								include ../icons/arrow-go
-							.slide-header
-								.service-image
-									include ../icons/relocation
-								p Specialist for Relocation
-							.slide-right.flex.align-hor-center.align-ver-center
-								include ../icons/arrow-go
-						.slide-option(data-tappable="true")
-							.option-name Onsite Developer/Team
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Workspace/Equipment
-							.option-checkbox
-						.slide-option(data-tappable="true")
-							.option-name PM
-							.option-checkbox
-						.slide-option(data-tappable="true")
-							.option-name QA
-							.option-checkbox
-						.slide-option(data-tappable="true")
-							.option-name Developer/Team solely engaged with your project
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Fast Start of the Project
-							.option-value Depends on Visa availability
-						.slide-option(data-tappable="true")
-							.option-name PM methodology
-							.option-value On Demand
-						.slide-option(data-tappable="true")
-							.option-name Instant Feedback
-							.option-value Until the final relocation
-						.slide-option(data-tappable="true")
-							.option-name Cardidates Interview
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Continuous Client Engagement
-							.option-checkbox.checked
-						.slide-option(data-tappable="true")
-							.option-name Estimates
-							.option-value Salary for the Team/Developer
-						.slide-option(data-tappable="true")
-							.option-name After Release Support
-							.option-checkbox
-						.slide-option(data-tappable="true")
-							.option-name Billing
-							.option-value %
-						.slide-option.button(data-tappable="true")
-							a(href="/services/relocation")
-								button(role="button") Learn More
-						.slide-option.footer(data-tappable="true")
-							a(href="/contact-us") Start Now
+			main.page-content
+		
+				section.section.section--first-after-menu
+					.section__wrapper
+						h1.section__title Services
+						p.section__text Based on scope and duration of a project, on-site or off-premise delivery team location, Uneed Web provides 3 services to deliver web and mobile solutions for your products. A combination of services is available as well.
 
-		include ../parts/footer
-		script(type="text/javascript" src="/js/libs.min.js")
-		script(type="text/javascript" src="/js/services.min.js")
-		include ../parts/navbar
+				section.section.section--without-padding-top.services-table
+					.services-table__wrapper
+						table(data-animations-group)
+							tr.services-table__row-headings(data-animation="fadeInDown")
+								td We provide:
+								th.services-table__heading.services-table__heading--project Project Development
+								th.services-table__heading.services-table__heading--team Staff Augmentation
+								th.services-table__heading.services-table__heading--relocation Relocation Specialist
+								td.services-table__switcher
+									btn.services-table__switch-btn.services-table__switch-btn--prev(type="button")
+										include ../icons/arrow-go
+									btn.services-table__switch-btn.services-table__switch-btn--next(type="button")
+										include ../icons/arrow-go
+							tr.services-table__row-group(data-animation="fadeInUpBig")
+								td People:
+							tr(data-animation="fadeInUpBig")
+								td Onsite Developer/Team
+								td.services-table__cell-with-point.services-table__cell-with-point--disabled
+								td.services-table__cell-with-point.services-table__cell-with-point--disabled
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+							tr(data-animation="fadeInUpBig")
+								td Workspace/Equipment
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--disabled
+							tr(data-animation="fadeInUpBig")
+								td PM
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td On Demand
+								td.services-table__cell-with-point.services-table__cell-with-point--disabled
+							tr(data-animation="fadeInUpBig")
+								td QA
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td On Demand
+								td.services-table__cell-with-point.services-table__cell-with-point--disabled
+							tr.services-table__row-group(data-animation="fadeInUpBig")
+								td Facilities:
+							tr(data-animation="fadeInUpBig")
+								td Developer/Team solely engaged with your project
+								td On Demand
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+							tr.services-table__row-group(data-animation="fadeInUpBig")
+								td Processes:
+							tr(data-animation="fadeInUpBig")
+								td Fast Start of the Project
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td Depends on Visa availability
+							tr(data-animation="fadeInUpBig")
+								td PM methodology
+								td SCRUM
+								td On Demand
+								td On Demand
+							tr(data-animation="fadeInUpBig")
+								td Instant Feedback
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td Until the final relocation
+							tr(data-animation="fadeInUpBig")
+								td Candidates Interview
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+							tr(data-animation="fadeInUpBig")
+								td Continuous Client Engagement
+								td On Demand
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+							tr(data-animation="fadeInUpBig")
+								td Estimates
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td Salary for the Team/Developer
+							tr(data-animation="fadeInUpBig")
+								td After Release Support
+								td.services-table__cell-with-point.services-table__cell-with-point--active
+								td On Demand
+								td.services-table__cell-with-point.services-table__cell-with-point--disabled
+							tr(data-animation="fadeInUpBig")
+								td Billing
+								td Monthly Payment
+								td Monthly Rates
+								td %
+							tr.services-table__big-row(data-animation="fadeInUpBig")
+								td
+								td
+									a.btn(href="/services/outsource/") Learn More
+								td
+									a.btn(href="/services/outstaff/") Learn More
+								td
+									a.btn(href="/services/relocation/") Learn More
+							tr.services-table__row-with-btns(data-animation="fadeInUpBig")
+								td
+								td
+									a.services-table__btn(href="/contact-us/") Start Now
+								td
+									a.services-table__btn(href="/contact-us/") Start Now
+								td
+									a.services-table__btn(href="/contact-us/") Start Now
 
+			include ../parts/footer
+			+footer("services")
+
+		script(src="/js/main-nav.min.js")
+		script.
+
+			var table = document.querySelector('.services-table table'),
+					tableColumnFirstItems = table.querySelectorAll('tr > *:nth-child(2)'),
+					tableColumnSecondItems = table.querySelectorAll('tr > *:nth-child(3)'),
+					tableColumnThirdItems = table.querySelectorAll('tr > *:nth-child(4)'),
+					columnCurrent = 1,
+					switchPrev = table.querySelector('.services-table__switch-btn--prev'),
+					switchNext = table.querySelector('.services-table__switch-btn--next');
+
+			function tableSwitch (index) {
+				if (index ==1) {
+					tableColumnSecondItems.forEach(function (item, index) {
+						tableColumnSecondItems[index].style.transform = '';
+						tableColumnSecondItems[index].style.opacity = '0';
+					});
+				}
+
+				if (index == 2) {
+					tableColumnSecondItems.forEach(function (item, index) {
+						tableColumnSecondItems[index].style.transform = 'translateX(-100%)';
+						tableColumnSecondItems[index].style.opacity = '1';
+					});
+					tableColumnThirdItems.forEach(function (item, index) {
+						tableColumnThirdItems[index].style.transform = 'translateX(-100%)';
+						tableColumnThirdItems[index].style.opacity = '0';
+					});
+				}
+
+				if (index == 3) {
+					tableColumnThirdItems.forEach(function (item, index) {
+						tableColumnThirdItems[index].style.transform = 'translateX(-200%)';
+						tableColumnThirdItems[index].style.opacity = '1';
+					});
+				}
+				columnCurrent = index;
+			}
+
+			switchPrev.addEventListener('click', function () {
+				if (columnCurrent > 1) {
+					tableSwitch(columnCurrent-1);
+					}
+			});
+
+			switchNext.addEventListener('click', function () {
+				if (columnCurrent < 3) {
+					tableSwitch(columnCurrent+1);
+					}
+			});
