--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -1,112 +1,65 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Project Development | UNeed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "According to recent KPMG study 36% of senior managers find project development outsourcing as a greater access to better standardized processes.")
-	body#service-page
-		include ../../parts/header
-		include ../../parts/mobile-nav
+	+head("Project Development | Uneed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "Looking for greater flexibility and operations scaling? Over 36% of senior managers find project development outsourcing as a way out. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.")
 
-		section#landing
+	body
+		.page-wrapper
 
-		section#switcher
-			#switch-left
-				a(href="/services/relocation")
-					include ../../icons/left-arrow
-			a(href="/services/outsource").active
-				h2.sub-title Project Development
-			a(href="/services/outstaff")
-				h2.sub-title Dedicated Development Team
-			a(href="/services/relocation")
-				h2.sub-title Specialist for Relocation
-			#switch-right
-				a(href="/services/outstaff")
-					include ../../icons/left-arrow
+			include ../../parts/header
+			+header("services-slide")
 
-		section#description
-			.container
-				.service-image.outsource
-				h1.title.dark Project Development
+			main.page-content
 
-				h2.sub-title 
-					p Aimed at businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks. 
+				section.section.section--without-padding-bottom
+					.section__wrapper.section__wrapper--margin-left-only
+						.switcher.switcher--left
+							a.switcher__btn.switcher__btn--prev
+								include ../../icons/left-arrow
+							a.switcher__name.switcher__name--active(href="/services/outsource/") Project Development
+							a.switcher__name(href="/services/outstaff/") Staff Augmentation
+							a.switcher__name(href="/services/relocation/") Relocation Specialist
+							a.switcher__btn.switcher__btn--next(href="/services/outstaff/")
+								include ../../icons/left-arrow
 
-					p For long-term projects (6+ months) we suggest you consider the Dedicated Development Team model.
+						section.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-project(data-animation="fadeIn")
+							h2.section__title.section__title--text-left Project Development
+							p.section__text.section__text--text-left.section__text--with-margin-bottom Looking for greater flexibility and operations scaling?<br>Over 36% of senior managers find project development outsourcing as a way out. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom The project development outsourcing service is aimed at businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom For long-term projects (6+ months) we suggest you consider the Staff Augmentation model.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom You do 5%, we do the remaining 95% for you.
+							a.section__btn.btn(href="/services/") Services comparison
+								include ../../icons/arrow-go
 
-				h2.sub-title.result You do 5%, we do the remaining 95% for you.
+				section.section.section--main-color.workflow.workflow--project(data-animation="fadeIn")
+					.workflow__wrapper(data-animations-group)
+						.workflow__inner.workflow__inner--right
+							h3.workflow__title You do
+							ul.workflow__list.workflow__list
+								li.workflow__item.workflow__item--color-1.workflow__item--tablet-position-1.workflow__item--items-opposite-after-2(data-animation="fadeIn")
+									span Provide technical requirements
+								li.workflow__item.workflow__item--color-2.workflow__item--tablet-position-4(data-animation="fadeIn")
+									span Approve estimate and project offer
+						.workflow__inner.workflow__inner--left
+							h3.workflow__title We do
+							ul.workflow__list.workflow__list
+								li.workflow__item.workflow__item--color-3.workflow__item--tablet-position-2.workflow__item--items-opposite-before-1(data-animation="fadeIn")
+									span Analyze, gather and offer the project estimate (timeline and budget)
+								li.workflow__item.workflow__item--color-4.workflow__item--tablet-position-3.workflow__item--items-opposite-after-1(data-animation="fadeIn")
+									span Submit project offer, pricing and schedule
+								li.workflow__item.workflow__item--color-5.workflow__item--tablet-position-5(data-animation="fadeIn")
+									span Set up a team and start a project
+								li.workflow__item.workflow__item--color-6.workflow__item--tablet-position-6(data-animation="fadeIn")
+									span Test and launch of a project
+								li.workflow__item.workflow__item--color-7.workflow__item--tablet-position-7(data-animation="fadeIn")
+									span In case needed, continuous project support
 
-				a(href="/services")
-					button(role="button")
-						span Services comparison
-						span.icon
-							include ../../icons/arrow-go
+				section.section(data-animation="fadeIn")
+					.section__wrapper
+						h2.section__title Result
+						p.section__text You get well-qualified team member, clean and robust code and successfully implemented product
 
-		section#workflow.mobile
-			.container
-				h1.title You do
-				ul.customer-workflow
-					li.color-1 Provide technical requirements
-					li.color-2 Approve estimate and project offer
-				h1.title We do
-				ul.uneed-workflow
-					li.color-3 Analyze, gather and offer the project estimate (timeline and budget)
-					li.color-4 Submit project offer, pricing and schedule
-					li.color-5 Set up a team and start a project
-					li.color-6 Test and launch of a project
-					li.color-7 In case needed, continuous project support
+			include ../../parts/footer
+			+footer("services-slide")
 
-		section#workflow.desktop.animated
-			.container
-				.workflow-header
-					h1.title We do
-					h1.title You do
-				.workflow-row.right.color-1
-					.workflow-item
-						.ball
-						.arrow
-						.text Provide technical requirements
-				.workflow-row.left.color-2
-					.workflow-item
-						.ball
-						.arrow
-						.text Analyze, gather and offer the project estimate (timeline and budget)
-				.workflow-row.left.color-3
-					.workflow-item
-						.ball
-						.arrow
-						.text Submit project offer, pricing and schedule
-				.workflow-row.right.color-4
-					.workflow-item
-						.ball
-						.arrow
-						.text Approve estimate and project offer
-				.workflow-row.left.color-5
-					.workflow-item
-						.ball
-						.arrow
-						.text Set up a team and start a project
-				.workflow-row.left.color-6
-					.workflow-item
-						.ball
-						.arrow
-						.text Test and launch of a project
-				.workflow-row.left.color-7
-					.workflow-item
-						.ball
-						.arrow
-						.text In case needed, continuous project support
-
-		section#result.animated
-			h1.title.dark Result
-			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
-
-			a(href="/services")
-				button(role="button")
-					span Services comparison
-					span.icon
-						include ../../icons/arrow-go
-
-		include ../../parts/footer
-		script(type="text/javascript" src="/js/libs.min.js")
-		script(type="text/javascript" src="/js/services.min.js")
-		include ../../parts/navbar
-
+		script(src="/js/main-nav.min.js")
